force-app/main/default/objects/Case_Type__c/Case_Type__c.object-meta.xml
<CustomObject>
    <label>Case Type</label>
    <nameField>
        <label>Case Type Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>