force-app/main/default/objects/Case_Type__c/fields/Daftar_Dokumen_Yang_Dibutuhkan__c.field-meta.xml
<CustomField>
    <fullName>Daftar_Dokumen_Yang_Dibutuhkan__c</fullName>
    <label>Daftar Dokumen Yang Dibutuhkan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>