force-app/main/default/objects/Case_Type__c/fields/Level_1_SLA__c.field-meta.xml
<CustomField>
    <fullName>Level_1_SLA__c</fullName>
    <label>Level 1 SLA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>