force-app/main/default/objects/Case_Type__c/fields/Level_4_Escalation_Team__c.field-meta.xml
<CustomField>
    <fullName>Level_4_Escalation_Team__c</fullName>
    <label>Level 4 Escalation Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>