force-app/main/default/objects/Case_Type__c/validationRules/Case_Type_Name_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Type_Name_Rule</fullName>
    <active>true</active>
    <description>Case Type Name cannnot be change</description>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>IsActive__c</errorDisplayField>
    <errorMessage>Case Type Number tidak dapat diubah</errorMessage>
</ValidationRule>